💄 fix: contact btn not centered on phone/tablet

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -278,6 +278,7 @@ header {
   position: relative;
 }
 .about__contact {
+  width: 160px;
   position: fixed;
   z-index: 5;
   bottom: 1rem;
